--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -25,5 +25,5 @@
             android:id="@+id/button_open_camera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Open Camera" />
+            android:text="Open Camera" tools:ignore="MissingConstraints"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
