--- a/app/src/main/res/layout/fragment_gyroscope.xml
+++ b/app/src/main/res/layout/fragment_gyroscope.xml
@@ -5,10 +5,10 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.dashboard.DashboardFragment">
+        tools:context=".ui.gyroscope.GyroscopeFragment">
 
     <TextView
-            android:id="@+id/text_dashboard"
+            android:id="@+id/text_home"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -20,10 +20,4 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
-
-    <Button
-            android:id="@+id/button_open_camera"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Open Camera" tools:ignore="MissingConstraints"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
